// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminEmails /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-hHLeRK btzriW page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjUoiL cAgDxb"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <div
        class="sc-kDDrLX emakin"
      >
        <a
          class="sc-iBkjds JLudk"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBrHrO dOSzAj admin-emailsstyles__StyledButton-sc-zq6ujt-0 jNNkEw"
      type="button"
    >
      <span
        class="sc-cxabCf kcehXf"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 kqhWey"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with emails 1`] = `
<div>
  <div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <div
        class="sc-kDDrLX emakin"
      >
        <a
          class="sc-iBkjds JLudk"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBrHrO dOSzAj admin-emailsstyles__StyledButton-sc-zq6ujt-0 jNNkEw"
      type="button"
    >
      <span
        class="sc-cxabCf kcehXf"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-dIouRR fiupoW admin-emailsstyles__Count-sc-zq6ujt-2 ZNuVi"
  >
    Showing 
    3
     of 
    3
     emails
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 kqhWey"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      >
        <a
          class="sc-gicCDI bfGlDG"
          href="/admin/emails?highlight=1"
          id="1"
        >
          <div
            class="sc-ezWOiH lfqRxL"
          >
            <div
              class="sc-bZkfAO kpENcq"
            />
            <div
              class="sc-kLLXSd gppdjy"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-ksZaOG fmXsYE"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-fEOsli bjQyEs"
                    id="email-1"
                  >
                    Email 1
                  </h1>
                  <span
                    class="sc-dIouRR fiupoW"
                  >
                    <br />
                    id: 
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-gicCDI bfGlDG"
          href="/admin/emails?highlight=2"
          id="2"
        >
          <div
            class="sc-ezWOiH lfqRxL"
          >
            <div
              class="sc-bZkfAO kpENcq"
            />
            <div
              class="sc-kLLXSd gppdjy"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-ksZaOG fmXsYE"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-fEOsli bjQyEs"
                    id="email-2"
                  >
                    Email 2
                  </h1>
                  <span
                    class="sc-dIouRR fiupoW"
                  >
                    <br />
                    id: 
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-gicCDI bfGlDG"
          href="/admin/emails?highlight=3"
          id="3"
        >
          <div
            class="sc-ezWOiH lfqRxL"
          >
            <div
              class="sc-bZkfAO kpENcq"
            />
            <div
              class="sc-kLLXSd gppdjy"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 cHrFus"
              >
                <div
                  class="sc-ksZaOG fmXsYE"
                >
                  <h1
                    class="sc-dkzDqf ddFalQ sc-fEOsli bjQyEs"
                    id="email-3"
                  >
                    Email 3
                  </h1>
                  <span
                    class="sc-dIouRR fiupoW"
                  >
                    <br />
                    id: 
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-hHLeRK btzriW page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjUoiL cAgDxb"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjUoiL bDehF"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idiyUo hyoeZZ"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <div
        class="sc-kDDrLX emakin"
      >
        <a
          class="sc-iBkjds JLudk"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBrHrO dOSzAj admin-emailsstyles__StyledButton-sc-zq6ujt-0 jNNkEw"
      type="button"
    >
      <span
        class="sc-cxabCf kcehXf"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-dIouRR fiupoW"
  >
    <span
      class="sc-dmRaPn cCLtJt"
    >
      Could not load emails
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 kqhWey"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <div
        class="sc-kDDrLX emakin"
      >
        <a
          class="sc-iBkjds JLudk"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBrHrO jPwjtv admin-emailsstyles__StyledButton-sc-zq6ujt-0 jNNkEw"
      disabled=""
      type="button"
    >
      <span
        class="sc-cxabCf hfKlhc"
      >
        Reload emails
      </span>
      <div
        aria-hidden="true"
        class="sc-llJcti bkWzGt"
      >
        <div
          class="sc-kgflAQ bGtehY"
        >
          <div
            class="sc-fLlhyt bOovNu"
          />
          <div
            class="sc-fLlhyt iltUFu"
          />
          <div
            class="sc-fLlhyt lWeXB"
          />
          <div
            class="sc-fLlhyt blXqmk"
          />
          <div
            class="sc-fLlhyt kWvkLb"
          />
          <div
            class="sc-fLlhyt jtwCiO"
          />
          <div
            class="sc-fLlhyt dbjVJS"
          />
          <div
            class="sc-fLlhyt hmlxzO"
          />
        </div>
      </div>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 kqhWey"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resendError 1`] = `
<div>
  <div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <div
        class="sc-kDDrLX emakin"
      >
        <a
          class="sc-iBkjds JLudk"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBrHrO dOSzAj admin-emailsstyles__StyledButton-sc-zq6ujt-0 jNNkEw"
      type="button"
    >
      <span
        class="sc-cxabCf kcehXf"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 kqhWey"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resending=true 1`] = `
<div>
  <div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <div
        class="sc-kDDrLX emakin"
      >
        <a
          class="sc-iBkjds JLudk"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-breuTD gWTOEy"
    >
      <h1
        class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBrHrO dOSzAj admin-emailsstyles__StyledButton-sc-zq6ujt-0 jNNkEw"
      type="button"
    >
      <span
        class="sc-cxabCf kcehXf"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 dsmGNQ admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 kqhWey"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dlOQM"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 hxKxqM"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-ksZaOG fmXsYE"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-fEOsli cWAOmA"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dIouRR fiupoW"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds JLudk"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
